Bug 987078 - If pointerType is "mouse" and buttons > 0, then pressure must be 0.5. r=smaug